# ComfyUI-CrewAI

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  __init__.py  agent_node.py  base_node.py  crew_node.py  list_agent_node.py  list_task_node.py  pyproject.toml  requirements.txt  task_node.py  textview_node.py
.github/workflows/: Flake8.yml  publish.yml
examples/: Basic_Workflow.json  complex_crew.json  simple_crew.json
js/: comfyui-crewai.js
nodes/: agent_node.py  base_node.py  crew_node.py  list_agent_node.py  list_task_node.py  llm_chatGpt_node.py  llm_huggingface_node.py  llm_ollama_node.py  llm_openai_node.py  save_text_node.py  task_node.py  textview_node.py
